# rust-bestbuy-scraper

./: .gitignore  Cargo.toml  Dockerfile  README
.github/workflows/: rust.yml
src/: main.rs  parser.rs  request.rs  statistics.rs  util.rs  webhook.rs
